--- a/common_vars.yml
+++ b/common_vars.yml
@@ -1,6 +1,6 @@
 ---
 # temp for testing
-dockerhub_un: s.p.russell00@gmail.com
+dockerhub_un: 
 dockerhub_pw: ''
 mysql_server_name: 'sql-container'
 mysql_root_password: ''
