--- a/common_vars.yml
+++ b/common_vars.yml
@@ -7,8 +7,7 @@ mysql_root_password: 'testing123'
 mysql_database: 'gradesdb'
 mysql_user: 'admin'
 mysql_password: 'testing123'
-ssh_service_account_name: 'testssh'
-ssh_service_account_password: 'testing123'
+ssh_service_account_name: 'ec2-user'
 _test_ip: '172.17.0.3'
 _db_ip: '172.17.0.4'
 # temp for testing
